--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
