--- a/frontend-idx/package.json
+++ b/frontend-idx/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.72.2",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
